--- a/.github/workflows/apm-pix1.yml
+++ b/.github/workflows/apm-pix1.yml
@@ -14,6 +14,7 @@ jobs:
       env:
           DEBIAN_FRONTEND: noninteractive
       run: |
+        sudo apt-get update
         sudo -E apt-get install git -y
         sudo -E apt-get install gitk git-gui -y
     - name: initial
