--- a/.github/workflows/apm-pix1.yml
+++ b/.github/workflows/apm-pix1.yml
@@ -25,6 +25,10 @@ jobs:
       run: |
         bash Tools/environment_install/install-prereqs-ubuntu.sh -y
         source ~/.bashrc
+        echo {$PATH}
+        export PATH=/opt/gcc-arm-none-eabi-6-2017-q2-update/bin:$PATH
+        export PATH=/home/runner/work/ardupilot/ardupilot/Tools/autotest:$PATH
+        echo {$PATH}
         ./waf configure --board Pixhawk1
         ./waf rover
     - name : Upload artifact
